Prevent sidebar from overlapping with request title.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -991,7 +991,6 @@ line-height: 140%;
 #request_show #right_column.half {
   width: 210px;
   padding: 0 0 0 10px;
-  margin-top: -60px;
   float:right;
 }
 
